# axiom

./: .cursorrules  .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALLATION_FIX.md  LICENSE  NOTICE  README.md  package-lock.json  package.json  svelte.config.js  verify-interfaces.ts  vite.config.ts
.cursor/: axiom_agent_state.json  context.md  resume.md
.kiro/specs/arm-toolchain-frontend-ui/: requirements.md
.kiro/specs/arm-toolchain-integration/: design.md  requirements.md  tasks.md
.kiro/specs/arm-toolchain-ui/: design.md  requirements.md  tasks.md
.kiro/specs/intelligent-autocomplete/: SETUP.md  design.md  requirements.md  tasks.md
crates/axiom-compliance/: Cargo.toml
crates/axiom-compliance/src/: coverage.rs  error.rs  lib.rs  modes.rs  tool_qualification.rs  traceability.rs
crates/axiom-compliance/tests/: integration_test.rs  property_test.proptest-regressions  property_test.rs
crates/axiom-core/: Cargo.toml
crates/axiom-core/src/: error.rs  lib.rs  types.rs
crates/axiom-git/: Cargo.toml
crates/axiom-git/src/: diff.rs  lib.rs  repo.rs  status.rs
crates/axiom-parser/: Cargo.toml
crates/axiom-parser/src/: ast.rs  lib.rs  parser.rs
crates/axiom-settings/: Cargo.toml
crates/axiom-settings/src/: lib.rs  migration.rs  persistence.rs  schema.rs
crates/axiom-symbols/: Cargo.toml
crates/axiom-symbols/src/: index.rs  lib.rs  symbol.rs
crates/axiom-terminal/: Cargo.toml
crates/axiom-terminal/src/: lib.rs  pty.rs  session.rs
crates/axiom-toolchain/: Cargo.toml
crates/axiom-toolchain/src/: arm_mcu.rs  binary_gen.rs  detection.rs  error.rs  invocation.rs  lib.rs  makefile.rs  types.rs  visualizer.rs
crates/axiom-toolchain/tests/: integration_test.rs  property_test.rs
demo-project/: Makefile  README.md  linker.ld  test_syntax.c  test_syntax.py  test_syntax.s
demo-project/drivers/: gpio.c  gpio.h  systick.c  systick.h
demo-project/include/: config.h
demo-project/src/: main.c  startup.c
docs/: DECISIONS.md  PROGRESS.md  WORKSTREAMS.md  arm-toolchain-config.md  brand.md  example-toolchain.toml  philosophy.md  voice.md
docs/adr/: 0001-project-scope.md  0002-toolchains.md  0003-ui-layout.md
docs/prs/: autocomplete-implementation-to-dev.md
scripts/: build.sh  check_spdx.sh  dev.sh  test_fast.sh  test_full.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: logging.rs  main.rs  state.rs
src-tauri/src/commands/: arm_toolchain.rs  compliance.rs  fs.rs  git.rs  mod.rs  parser.rs  settings.rs  symbols.rs  terminal.rs  toolchain.rs
src/lib/components/: AboutPanel.svelte  Autocomplete.svelte  DiffViewer.svelte  EditorArea.svelte  EditorPane.svelte  EditorSplitView.svelte  FileExplorer.svelte  MiniConsole.svelte  Panel.svelte  Sidebar.svelte  Sidebar.test.ts  SourceControl.svelte  Splash.svelte  StatusBar.svelte  Terminal.svelte  TreeNode.svelte
src/lib/components/arm/: ArmToolchainPanel.svelte  ArmToolchainPanel.test.ts  ToolchainSettings.svelte  ToolchainSettings.test.ts  index.ts
src/lib/stores/: armToolchain.ts  compliance.ts  console.ts  editor.ts  editorPanes.ts  git.ts  index.ts  settings.ts  status.ts  terminal.ts  toolchain.ts  workspace.ts
src/lib/strings/: index.ts
src/lib/utils/: autocomplete.test.ts  autocomplete.ts  encoding.ts  syntax.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
static/data/corpuses/: README.md  assembly.json  astro.json  bash.json  c.json  cpp.json  css.json  dockerfile.json  go.json  html.json  java.json  javascript.json  json.json  makefile.json  markdown.json  python.json  rust.json  sql.json  svelte.json  toml.json  typescript.json  xml.json  yaml.json
tests/fixtures/: simple.c  simple.cpp
tests/fixtures/arm-reference-project/: Makefile  STM32F103C8_FLASH.ld
tests/fixtures/arm-reference-project/.axiom/: toolchain.toml
tests/fixtures/arm-reference-project/Core/Inc/: config.h  main.h
tests/fixtures/arm-reference-project/Core/Src/: main.c
tests/fixtures/arm-reference-project/Drivers/: gpio.c  gpio.h  timer.c  timer.h  uart.c  uart.h
tests/fixtures/arm-reference-project/Tests/: test_gpio.c
tests/fixtures/arm-reference-project/compliance/: requirements.csv  traced_module.c  untraced_module.c
tests/fixtures/arm-reference-project/edge_cases/: circular_a.h  circular_b.h  circular_includes.c  deeply_nested_includes.c  empty_file.c  heavy_macros.c  inline_assembly.c  linker_overflow.c  missing_include.c  nested_include_1.h  nested_include_2.h  nested_include_3.h  nested_include_4.h  nested_include_5.h  syntax_error.c  unicode_comments.c  very_long_lines.c
