# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 HawkLogic Systems

[package]
name = "axiom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axiom IDE - Deterministic. Inspectable. Offline."
default-run = "axiom"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
axiom-core = { path = "../crates/axiom-core" }
axiom-settings = { path = "../crates/axiom-settings" }
axiom-toolchain = { path = "../crates/axiom-toolchain" }
axiom-compliance = { path = "../crates/axiom-compliance" }
axiom-parser = { path = "../crates/axiom-parser" }
axiom-symbols = { path = "../crates/axiom-symbols" }
axiom-git = { path = "../crates/axiom-git" }
axiom-terminal = { path = "../crates/axiom-terminal" }

tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
open = "5"
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
