# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 HawkLogic Systems

[package]
name = "axiom-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axiom core types and utilities"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
