# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 HawkLogic Systems

[package]
name = "axiom-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axiom Git integration via libgit2"

[dependencies]
axiom-core = { path = "../axiom-core" }
git2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
